# hs-builder-api

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
api/: builder.toml
hs_builder_api/: all.html  index.html  sidebar-items.js
hs_builder_api/block_info/: index.html  sidebar-items.js  struct.AvailableBlockData.html  struct.AvailableBlockHeader.html  struct.AvailableBlockHeaderInput.html  struct.AvailableBlockInfo.html
hs_builder_api/block_metadata/: index.html  sidebar-items.js  struct.BlockMetadata.html  struct.HashableBlock.html  type.BlockHash.html
hs_builder_api/builder/: enum.BuildError.html  enum.Error.html  fn.define_api.html  fn.submit_api.html  index.html  sidebar-items.js  struct.BlockAvailableSnafu.html  struct.BlockClaimSnafu.html  struct.CustomSnafu.html  struct.MissingSnafu.html  struct.NotFoundSnafu.html  struct.Options.html  struct.RequestSnafu.html  struct.Snafu.html  struct.TxnSubmitSnafu.html  struct.TxnUnpackSnafu.html
hs_builder_api/data_source/: index.html  trait.AcceptsTxnSubmits.html  trait.BuilderDataSource.html
hs_builder_api/query_data/: index.html  struct.AvailableBlocksQueryData.html
src/: api.rs  block_info.rs  block_metadata.rs  builder.rs  data_source.rs  lib.rs  query_data.rs
src/hs_builder_api/: api.rs.html  block_info.rs.html  block_metadata.rs.html  builder.rs.html  data_source.rs.html  lib.rs.html  query_data.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.FromArgMatches.js
trait.impl/commit/: trait.Committable.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  (+2 more)
trait.impl/snafu/: trait.ErrorCompat.js  trait.IntoError.js
type.impl/commit/: struct.Commitment.js
(+5 files in other folders)
