[package]
name = "hs-builder-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.8" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

